# Dragon

./: README.md
Dragon/: CMakeLists.txt  main_install.sh  py_install.bat  py_install.sh
Dragon/ext/python/dragon/: __init__.py  pydragon.py  utils.py
Dragon/include/: blob.hpp  common.hpp  data_reader.hpp  data_transformer.hpp  dragon_thread.hpp  layer.hpp  layer_factory.hpp  net.hpp  solver.hpp  syncedmem.hpp
Dragon/include/layers/: common_layers.hpp  data_layers.hpp  loss_layers.hpp  mpi_layers.hpp  neuron_layers.hpp  recurrent_layers.hpp  vision_layers.hpp
Dragon/include/layers/common/: accuracy_layer.hpp  batch_norm.hpp  concat_layer.hpp  eltwise_layer.hpp  inner_product_layer.hpp  python_layer.hpp  reshape_layer.hpp  softmax_layer.hpp  split_layer.hpp
Dragon/include/layers/data/: base_data_layer.hpp  data_layer.hpp  prefetching_data_layer.hpp
Dragon/include/layers/loss/: l1_loss_layer.hpp  l2_loss_layer.hpp  loss_layer.hpp  softmax_loss_layer.hpp
Dragon/include/layers/mpi/: base_mpi_layer.hpp  mpi_broadcast_layer.hpp  mpi_gather_layer.hpp
Dragon/include/layers/neuron/: dropout_layer.hpp  neuron_layer.hpp  (+2 more)
Dragon/include/parallel/: parameter_server.hpp
Dragon/include/solvers/: gradient_solver.hpp
Dragon/include/utils/: blocking_queue.hpp  db.hpp  db_lmdb.hpp  device.hpp  filler.hpp  im2col.hpp  insert_splits.hpp  io.hpp  math.hpp  mkl_alternative.hpp  rng.hpp
Dragon/src/: blob.cpp  common.cpp  data_reader.cpp  data_transformer.cpp  dragon_thread.cpp  layer_factory.cpp  net.cpp  solver.cpp  syncedmem.cpp
Dragon/src/parallel/: parameter_server.cpp
Dragon/src/protos/: dragon.proto
Dragon/src/solvers/: adadelta_solver.cpp  adadelta_solver.cu  rmsprop_solver.cpp  rmsprop_solver.cu  sgd_solver.cpp
Dragon/src/utils/: blocking_queue.cpp  db.cpp  db_lmdb.cpp  im2col.cpp  im2col.cu  insert_splits.cpp  math.cpp  math.cu
Dragon/targets/exec/: CMakeLists.txt  main.cpp
Dragon/targets/python/: CMakeLists.txt  _dragon.cpp
(+46 files in other folders)
